<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:gravity="center"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:orientation="vertical"
        android:gravity="center"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_horizontal"
            >

            <EditText
                android:id="@+id/hours"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:textSize="50sp"
                android:hint="@string/hours"
                android:inputType="number"
                android:maxLength="2"
                />

            <TextView
                android:id="@+id/hours_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="4dp"
                android:textSize="50sp"
                android:visibility="gone"
                android:text=""
                android:textColor="@color/black"
                />

            <TextView
                android:id="@+id/hours_sign"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:textSize="50sp"
                android:text="@string/hours_sign"
                />

            <EditText
                android:id="@+id/minutes"
                android:layout_width="62dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:textSize="50sp"
                android:hint="@string/minutes"
                android:inputType="number"
                android:maxLength="2"
                />

            <TextView
                android:id="@+id/minutes_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="4dp"
                android:textSize="50sp"
                android:visibility="gone"
                android:text=""
                android:textColor="@color/black"
                />

            <TextView
                android:id="@+id/minutes_sign"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:textSize="50sp"
                android:text="@string/minutes_sign"
                />

            <EditText
                android:id="@+id/seconds"
                android:layout_width="62dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:textSize="50sp"
                android:hint="@string/seconds"
                android:inputType="number"
                android:maxLength="2"
                />

            <TextView
                android:id="@+id/seconds_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="4dp"
                android:textSize="50sp"
                android:visibility="gone"
                android:text=""
                android:textColor="@color/black"
                />

            <TextView
                android:id="@+id/seconds_sign"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:textSize="50sp"
                android:text="@string/seconds_sign"
                />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/buttons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_horizontal"
            android:layout_marginTop="50dp"
            >

            <Button
                android:id="@+id/start"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_marginHorizontal="50dp"
                android:onClick="onClickStart"
                android:text="@string/start"
                android:background="@color/teal_700"
                android:textColor="@color/white"
                tools:ignore="UsingOnClickInXml" />

            <Button
                android:id="@+id/cancel"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_marginHorizontal="50dp"
                android:onClick="onClickCancel"
                android:text="@string/cancel"
                android:visibility="gone"
                android:background="@color/teal_700"
                android:textColor="@color/white"
                tools:ignore="UsingOnClickInXml" />

            <Button
                android:id="@+id/mode"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_marginHorizontal="50dp"
                android:onClick="onClickMode"
                android:text="@string/mode"
                android:visibility="gone"
                android:background="@color/teal_700"
                android:textColor="@color/white"
                tools:ignore="UsingOnClickInXml" />

        </LinearLayout>
    </LinearLayout>

</RelativeLayout>
